--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<h2>
+    <span th:text="${error}"></span>
+</h2>
 <form action="#" th:action="@{/login}" th:object="${loginForm}" method="post">
     <p>User: <input type="text" th:field="*{user}" /></p>
     <p>Password: <input type="password" th:field="*{password}" /></p>
