--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Getting Started: Serving Web Content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
+<form action="#" th:action="@{/main}" th:object="${mainForm}" method="post">
+
+    <select th:field="*{cityId}">
+        <option selected="selected" value="">Choose</option>
+        <option th:each="city : ${cities}"
+                th:value="${city.id}"
+                th:text="${city.name}"></option>
+    </select>
+
+    <select th:field="*{serviceId}">
+        <option selected="selected" value="">Choose</option>
+        <option th:each="service : ${services}"
+                th:value="${service.id}"
+                th:text="${service.name}"></option>
+    </select>
+
+    <select th:field="*{clinicId}">
+        <option selected="selected" value="">Any</option>
+        <option th:each="clinic : ${clinics}"
+                th:value="${clinic.id}"
+                th:text="${clinic.name}"></option>
+    </select>
+
+    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+</form>
 Choose service:
 </body>
 </html>
