--- a/src/main/resources/templates/first.html
+++ b/src/main/resources/templates/first.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<form action="#" th:action="@{/main}" th:object="${mainForm}" method="post">
+<form action="#" th:action="@{/first}" th:object="${firstStepForm}" method="post">
 
     <select th:field="*{cityId}">
         <option selected="selected" value="">Choose</option>
