--- a/src/main/resources/templates/second.html
+++ b/src/main/resources/templates/second.html
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-    <span th:text="${clinic.name}"></span>
+    <span th:text="${clinic != null} ? ${clinic.name} : 'Any'">someValue</span>
     <span th:text="${service.name}"></span>
     <span th:text="${city.name}"></span>
 
-    <form action="#" th:action="@{/second}" th:object="${secondStepForm}" method="post">
+    <form action="#" th:action="@{/summary}" th:object="${summaryForm}" method="post">
 
         <select th:field="*{doctorId}">
             <option selected="selected" value="">Any</option>
@@ -25,9 +25,9 @@
                     th:text="${payer.name}"></option>
         </select>
 
-        <input type="hidden" th:value="${clinic.id}" th:field="*{clinicId}" />
-        <input type="hidden" th:value="${service.id}" th:field="*{serviceId}" />
-        <input type="hidden" th:value="${city.id}" th:field="*{cityId}" />
+        <input type="hidden" th:value="${clinic != null} ? ${clinic.id} : ''" id="clinicId" name="clinicId"/>
+        <input type="hidden" th:value="${service.id}" id="serviceId" name="serviceId"/>
+        <input type="hidden" th:value="${city.id}" id="cityId" name="cityId" />
 
         <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
     </form>
